fixed scrollbar issue

--- a/src/stylesheets/style.sass
+++ b/src/stylesheets/style.sass
@@ -120,7 +120,6 @@ main
   height: 85%
 
   ul
-    overflow: scroll
     height: 100%
 
     background-color: $off-white
